# hmh_coaching

./: .gitignore  7aside-player-guide-print.html  7aside-player-guide.html  7aside-position-guide-print.html  7aside-position-guide.html  7aside-shapes-guide-print.html  7aside-shapes-guide.html  index.html  serve.sh
.github/workflows/: deploy.yml
player_assessment/: README.md
player_assessment/backend/: .env.example  bobtails_skill_matrix.json  pyproject.toml
player_assessment/backend/app/: auth.py  config.py  main.py  models.py  schemas.py
player_assessment/backend/app/routers/: assessments.py  periods.py  priorities.py
player_assessment/frontend/: .env.example  .env.production  vite.config.js
player_assessment/frontend/src/: App.css  App.jsx  CoachPage.jsx  ComparisonView.jsx  HeatmapView.jsx  PlayerPage.jsx  PrioritiesView.jsx  SkillForm.jsx  SummaryView.jsx  api.js  assessment.js  index.css  matrix.js
