[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.137.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
